--- a/0x03-ES6_data_manipulation/package.json
+++ b/0x03-ES6_data_manipulation/package.json
@@ -10,10 +10,14 @@
     "@babel/core": "^7.6.0",
     "@babel/node": "^7.8.0",
     "@babel/preset-env": "^7.6.0",
-    "eslint": "^6.4.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.17.0",
-    "jest": "^24.9.0"
+    "jest": "^27.5.1",
+    "prettier-eslint-cli": "^5.0.1"
+  },
+  "dependencies": {
+    "optionator": "^0.9.1"
   }
 }
