--- a/0x04-TypeScript/task_0/package.json
+++ b/0x04-TypeScript/task_0/package.json
@@ -28,5 +28,8 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
+  },
+  "dependencies": {
+    "start-dev": "^1.0.0"
   }
 }
